Fixed crash report list being able to become too long

--- a/thrive.css
+++ b/thrive.css
@@ -442,6 +442,11 @@ hr {
     max-height: 320px;
 }
 
+#crashReportingContent ul{
+    overflow: auto;
+    max-height: 320px;
+}
+
 textarea.Report {
     width: 600px;
     height: 80px;
